# rust-template

./: Cargo.toml  Dockerfile  README.md
src/: hello.rs  list.rs  main.rs
src/list/: testailua.rs
