[package]
name = "rusting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.serde]

version = "1.0.140"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]